# cyanure

./: .buildinfo  .coveragec  .gitattributes  .gitignore  16_mkl_l2_1.280E-10_5_4_ista_1e-05_rcv1.csv  16_mkl_l2_1.280E-10_5_4_qning-ista_1e-05_rcv1.csv  16_mkl_l2_1.280E-10_5_4_qning-svrg_1e-05_rcv1.csv  16_mkl_l2_1.383E-09_5_4_miso_1e-05_real-sim.csv  16_mkl_l2_1.383E-09_5_4_qning-ista_1e-05_real-sim.csv  16_mkl_l2_1.383E-09_5_4_qning-miso_1e-05_real-sim.csv  16_mkl_l2_1.667E-09_5_4_ista_1e-05_ckn_mnist.csv  16_mkl_l2_1.667E-09_5_4_miso_1e-05_ckn_mnist.csv  16_mkl_l2_1.667E-09_5_4_qning-ista_1e-05_ckn_mnist.csv  16_mkl_l2_1.667E-09_5_4_svrg_1e-05_ckn_mnist.csv  16_mkl_l2_1.721E-10_5_4_ista_1e-05_covtype.csv  16_mkl_l2_2.000E-10_5_4_qning-svrg_1e-05_alpha.csv  16_mkl_l2_2.000E-10_5_4_svrg_1e-05_alpha.csv  16_mkl_l2_2.181E-12_5_4_svrg_1e-05_criteo.csv  16_mkl_l2_4.000E-10_5_4_catalyst-svrg_1e-05_webspam.csv  16_mkl_l2_4.000E-10_5_4_fista_1e-05_epsilon.csv  16_mkl_l2_4.000E-10_5_4_ista_1e-05_epsilon.csv  16_mkl_l2_4.000E-10_5_4_miso_1e-05_epsilon.csv  16_mkl_l2_4.000E-10_5_4_miso_1e-05_webspam.csv  16_mkl_l2_4.000E-10_5_4_qning-miso_1e-05_epsilon.csv  16_mkl_l2_4.000E-10_5_4_svrg_1e-05_epsilon.csv  16_mkl_l2_4.000E-11_5_4_ista_1e-05_ocr.csv  16_mkl_l2_5.191E-12_5_4_ista_1e-05_kddb.csv  16_mkl_l2_5.191E-12_5_4_qning-miso_1e-05_kddb.csv  16_mkl_l2_5.191E-12_5_4_svrg_1e-05_kddb.csv  1_mkl_l2_1.280E-10_5_4_acc-svrg_1e-05_rcv1.csv  1_mkl_l2_1.280E-10_5_4_catalyst-miso_1e-05_rcv1.csv  1_mkl_l2_1.280E-10_5_4_catalyst-svrg_1e-05_rcv1.csv  1_mkl_l2_1.280E-10_5_4_miso_1e-05_rcv1.csv  1_mkl_l2_1.280E-10_5_4_qning-svrg_1e-05_rcv1.csv  1_mkl_l2_1.383E-09_5_4_acc-svrg_1e-05_real-sim.csv  1_mkl_l2_1.383E-09_5_4_catalyst-miso_1e-05_real-sim.csv  1_mkl_l2_1.383E-09_5_4_catalyst-svrg_1e-05_real-sim.csv  1_mkl_l2_1.383E-09_5_4_qning-ista_1e-05_real-sim.csv  1_mkl_l2_1.667E-09_5_4_fista_1e-05_ckn_mnist.csv  1_mkl_l2_1.667E-09_5_4_svrg_1e-05_ckn_mnist.csv  (+169 more)
.doctrees/: benchmarks.doctree  environment.pickle  index.doctree  references.doctree  tutorials.doctree  welcome.doctree
.doctrees/pythonAPI/: data_processing.doctree  estimators.doctree  pythonAPI.doctree
.github/workflows/: ci.yml  coverage.yml  develop.yml  main.yml  sphinx.yml
_modules/: index.html
_modules/cyanure/: data_processing.html  estimators.html
_sources/: tutorials.rst.txt  welcome.rst.txt
_sources/pythonAPI/: pythonAPI.rst.txt
assets/: callback.js  callback.js?m=1662023166.0826724  callback.js?m=1678719073.9966302
benchmark/: activate_environment.sh  benchmark_dummy.py  benchmark_rework.py  benchmark_rework_old.py  draw_curves.py  export_mlflow_data.py  launch_experiments.sh  oar_jobs.sh
build_script/: macos.sh
csvs/: 16_blis_l2_1.280E-10_5_16_acc-svrg_1e-05_rcv1.csv  16_blis_l2_1.280E-10_5_16_auto_1e-05_rcv1.csv  16_blis_l2_1.280E-10_5_16_catalyst-ista_1e-05_rcv1.csv  16_blis_l2_1.280E-10_5_16_catalyst-miso_1e-05_rcv1.csv  16_blis_l2_1.280E-10_5_16_catalyst-svrg_1e-05_rcv1.csv  16_blis_l2_1.280E-10_5_16_fista_1e-05_rcv1.csv  16_blis_l2_1.280E-10_5_16_ista_1e-05_rcv1.csv  16_blis_l2_1.280E-10_5_16_miso_1e-05_rcv1.csv  16_blis_l2_1.280E-10_5_16_qning-ista_1e-05_rcv1.csv  16_blis_l2_1.280E-10_5_16_qning-miso_1e-05_rcv1.csv  16_blis_l2_1.280E-10_5_16_qning-svrg_1e-05_rcv1.csv  16_blis_l2_1.280E-10_5_16_svrg_1e-05_rcv1.csv  16_blis_l2_1.383E-09_5_16_acc-svrg_1e-05_real-sim.csv  16_blis_l2_1.383E-09_5_16_auto_1e-05_real-sim.csv  16_blis_l2_1.383E-09_5_16_catalyst-ista_1e-05_real-sim.csv  16_blis_l2_1.383E-09_5_16_catalyst-miso_1e-05_real-sim.csv  16_blis_l2_1.383E-09_5_16_catalyst-svrg_1e-05_real-sim.csv  16_blis_l2_1.383E-09_5_16_fista_1e-05_real-sim.csv  16_blis_l2_1.383E-09_5_16_ista_1e-05_real-sim.csv  16_blis_l2_1.383E-09_5_16_miso_1e-05_real-sim.csv  16_blis_l2_1.383E-09_5_16_qning-ista_1e-05_real-sim.csv  16_blis_l2_1.383E-09_5_16_qning-miso_1e-05_real-sim.csv  16_blis_l2_1.383E-09_5_16_qning-svrg_1e-05_real-sim.csv  16_blis_l2_1.383E-09_5_16_svrg_1e-05_real-sim.csv  16_blis_l2_1.667E-09_5_16_acc-svrg_1e-05_ckn_mnist.csv  16_blis_l2_1.667E-09_5_16_auto_1e-05_ckn_mnist.csv  16_blis_l2_1.667E-09_5_16_catalyst-ista_1e-05_ckn_mnist.csv  16_blis_l2_1.667E-09_5_16_catalyst-miso_1e-05_ckn_mnist.csv  16_blis_l2_1.667E-09_5_16_catalyst-svrg_1e-05_ckn_mnist.csv  16_blis_l2_1.667E-09_5_16_fista_1e-05_ckn_mnist.csv  16_blis_l2_1.667E-09_5_16_ista_1e-05_ckn_mnist.csv  16_blis_l2_1.667E-09_5_16_miso_1e-05_ckn_mnist.csv  16_blis_l2_1.667E-09_5_16_qning-ista_1e-05_ckn_mnist.csv  16_blis_l2_1.667E-09_5_16_qning-miso_1e-05_ckn_mnist.csv  16_blis_l2_1.667E-09_5_16_qning-svrg_1e-05_ckn_mnist.csv  16_blis_l2_1.667E-09_5_16_svrg_1e-05_ckn_mnist.csv  16_blis_l2_1.721E-10_5_16_acc-svrg_1e-05_covtype.csv  16_blis_l2_1.721E-10_5_16_auto_1e-05_covtype.csv  16_blis_l2_1.721E-10_5_16_catalyst-ista_1e-05_covtype.csv  16_blis_l2_1.721E-10_5_16_catalyst-miso_1e-05_covtype.csv  (+2505 more)
cyanure/: __init__.py  cyanure.py  data_processing.py  estimators.py  logger.py
cyanure_lib/: __init__.py  cyanure_wrap.cpp  cyanure_wrap_module.cpp
cyanure_lib/lib/: basic_math_template.h  convert_cxx_to_python.h  data.h  erm.h  linalg.h  loss.h  macro.h  misc.h  regul.h  solvers.h  sorting_algorithms.h  timer.h  wrapper_utils.h
dash/: robots.txt
dash/assets/: callback.js?m=1661861264.8007884
doc/: bib.bib  main.tex
doc/latex/: Makefile  figure.tex  main.tex
doc/sphinx/: Makefile
docs/: CI.md  Makefile  main.tex  requirements.txt
docs/dash/: Makefile  app.py  missing_experiments.py
docs/plots/: plot.py
docs/sphinx/: Makefile
lib/: linalg.h
openmp_helper/: openmp_helpers.py
pythonAPI/: data_processing.html  estimators.html  pythonAPI.html
test/: test.py  test_active_set.py  test_dummy.py  test_estimator.py  test_logistic_regression.py
tutorials/: ckn_mnist_multi_classification_l1l2.py  ckn_mnist_multi_classification_l2.py  criteo_binary_classification.py  rcv1_binary_classification.py  rcv1_old.py.prof
utils/: cblas_alt_template.h  cblas_defvar.h  data.h  linalg.h  list.h  loss.h  misc.h  regul.h  solvers.h  utils.h  wrapper_utils.h
(+2907 files in other folders)
