[build-system]
requires = [
    "setuptools==58.0.4",
    "wheel==0.37.0",
    "scipy<=1.8.1;python_version<'3.11'", "scipy>=1.8.1;python_version>='3.11'",
    "numpy>=1.23.5;python_version>='3.11'", "numpy<=1.23.5;python_version<'3.11'",
    "scikit-learn"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = ["pp*", "*musllinux*"]

[tool.cibuildwheel.linux]
before-all = "yum install -y openblas-devel libgomp  || apk add openblas-dev libgomp"
test-command =  ["cd  {package}",]
skip = ["*i686", "pp*", "*musllinux*"]

[tool.cibuildwheel.macos]
# Run multiple commands using an array
archs = ["arm64", "x86_64"]
build = "cp*"
test-skip = "*_arm64 *_universal2:arm64"
before-all = [
  "brew install llvm",
]
test-command =  ["cd  {package}",]
before-build = "build_script/macos.sh"
repair-wheel-command = [
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
  "otool -L {wheel}",
]


[tool.cibuildwheel.macos.environment]
CC = "/usr/bin/clang"
CXX = "/usr/bin/clang++"
CPPFLAGS="-Xpreprocessor -fopenmp"
CFLAGS="-I/usr/local/miniconda/envs/build/include"
CXXFLAGS="-I/usr/local/miniconda/envs/build/include"
LDFLAGS="-Wl,-rpath,/usr/local/miniconda/envs/build/lib -L$/usr/local/miniconda/envs/build/lib -lomp"


[tool.cibuildwheel.windows]
# Run multiple commands using an array
before-all = [
  "powershell.exe Invoke-WebRequest https://github.com/xianyi/OpenBLAS/releases/download/v0.3.21/OpenBLAS-0.3.21-x86.zip -OutFile D:/a/cyanure/cyanure/openblas_86.zip",
  "powershell.exe Expand-Archive -Path D:/a/cyanure/cyanure/openblas_86.zip -DestinationPath D:/a/cyanure/cyanure/openblas_86",
  "powershell.exe Invoke-WebRequest https://github.com/xianyi/OpenBLAS/releases/download/v0.3.21/OpenBLAS-0.3.21-x64.zip -OutFile D:/a/cyanure/cyanure/openblas_64.zip",
  "powershell.exe Expand-Archive -Path D:/a/cyanure/cyanure/openblas_64.zip -DestinationPath D:/a/cyanure/cyanure/openblas_64",
]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -v --add-path=D:\\a\\cyanure\\cyanure\\openblas_64\\bin;D:\\a\\cyanure\\cyanure\\openblas_86\\bin\\ -w {dest_dir} {wheel}"
test-command =  ["cd /d {package}",]
# https://github.com/scipy/scipy/issues/16286
build = ["*amd64"]